--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,9 @@
 @tailwind components;
 @tailwind utilities;
 body {
+  overflow-x: hidden;
   margin: 0;
+  padding: 0;
   font-family: "Poppins", sans-serif;
 }
 
