--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@ body {
   overflow-x: hidden;
   margin: 0;
   padding: 0;
-  font-family: "Poppins", sans-serif;
+  font-family: sans-serif;
 }
 
 code {
