--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
 @tailwind utilities;
 body {
   overflow-x: hidden;
+  overflow-wrap: break-word;
   margin: 0;
   padding: 0;
   font-family: sans-serif;
