--- a/src/index.css
+++ b/src/index.css
@@ -6,8 +6,13 @@
 
 body {
   overflow-x: hidden;
-  overflow-wrap: break-word;
+  overflow-y: scroll;
+  /* overflow: auto; */
+  /* overflow-x: hidden; */
+  /* overflow-wrap: break-word; */
+  box-sizing: border-box;
   margin: 0;
+  margin-right: 0;
   padding: 0;
   font-family: sans-serif;
 }
